[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oauth_testing_flask"
version = "1.0.0"
requires-python = ">=3.7"
dependencies = [
    "Flask>=2.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<8",
]

[tool.setuptools.package-data]
"*" = ["**/static/**/*", "**/templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
